# data-projects

./: .gitignore  README.md
academic-papers/Scraper/: README.md  requirements.txt
academic-papers/Scraper/scraper/: cli.py  listener.py  monitor.py  oai.py  result.py  scraper.py  storage.py
academic-papers/Scraper/tests/: context.py  test_oai.py  test_result.py  test_scraper.py  test_storage.py
academic-papers/Scraper/tests/data/: error_bad_argument.xml  (+14 more)
sudoku-solving/: README.md
sudoku-solving/basic-solver/: requirements.txt
sudoku-solving/basic-solver/solver/: search.py  state.py
sudoku-solving/basic-solver/test/: test_search.py  test_state.py
sudoku-solving/c-brute-force/: CMakeLists.txt
sudoku-solving/c-brute-force/demo/: CMakeLists.txt  main.cpp
sudoku-solving/c-brute-force/solve/: CMakeLists.txt  main.cpp  parse.cpp  parse.h
sudoku-solving/c-brute-force/solver/: CMakeLists.txt  search.cpp  search.h  state.cpp  state.h
sudoku-solving/c-brute-force/test/: CMakeLists.txt  search_check.cpp  state_check.cpp
sudoku-solving/learning/: .gitattributes  CMakeLists.txt  requirements.txt  setup.py
sudoku-solving/learning/c_solver/: CMakeLists.txt
sudoku-solving/learning/c_solver/solver/: CMakeLists.txt  solver.cpp  solver.h  solvermodule.cpp
sudoku-solving/learning/learner/: search.py
sudoku-solving/learning/scripts/: logitdata  trainlogit
sudoku-solving/learning/solving/: logit.py  search.py
sudoku-solving/learning/tests/: test_c_solver.py  test_search.py
sudoku-solving/learning/training/: climb.py  dataset.py  logit.py
(+2 files in other folders)
